--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-owl-carousel": "^2.3.3",
     "react-slick": "^0.30.2",
+    "react-use": "^17.5.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
